# lazycxxtemplate

./: .gitignore  CMakeLists.txt  README.md  customize
__APP_NAME__/: CMakeLists.txt
__APP_NAME__/src/: main.cpp
__LIB_NAME__/: CMakeLists.txt
__LIB_NAME__/include/__LIB_NAME__/: anchor.hpp
__LIB_NAME__/src/: anchor.cpp
cmake/: Dependencies.cmake
tests/: CMakeLists.txt
tests/src/: test_anchor.cpp
